# News-Arabic-RAG

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  health.py  ingestion.py  query.py
backend/app/services/: data_ingestion.py  rag_engine.py
backend/app/services/scrapers/: __init__.py  aljazeera.py  reuters.py
backend/scripts/: ingest.py
bot/: Dockerfile  requirements.txt
bot/app/: main.py
bot/app/client/: __init__.py  api_client.py
bot/app/handlers/: __init__.py  message_handlers.py
scripts/: verify_system.py
